Fix overflow in about section

--- a/src/components/about/style.scss
+++ b/src/components/about/style.scss
@@ -2,13 +2,17 @@
 
 .aboutContainer{
     background-color: $primaryBackground;
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: space-evenly;
+
     .aboutImgContainer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
         img{
             cursor: default;
             height: 500px;
@@ -18,8 +22,9 @@
     .aboutInfoContainer{
         display:flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
+        padding: 30px 0px;
         .aboutTitleContainer{
             .aboutTitle{
                 @include titleFont($title);
@@ -27,14 +32,6 @@
                 text-align: center;
                 margin: $large;
                 padding: 0px;
-            }
-        }
-        .aboutParContainer{
-            width: 30vw;
-            .aboutText{
-                @include textFont($text);
-                color: $primaryText;
-                text-align: justify;
             }
         }
         .aboutButtonContainer{
