--- a/src/components/home/style.scss
+++ b/src/components/home/style.scss
@@ -53,15 +53,14 @@
     }
     .wallpaper{
         position: absolute;
-        width: 99vw;
+        width: 100vw;
         height: 100vh;
         z-index: 4;
         bottom: 0;
     }
     .wallpaper2{
         position: absolute;
-        width: 99vw;
-        height: 100vh;
+        width: 100vw;
         z-index: 4;
         top: 0;
     }
